# avu-web

./: AGENTS.md  GOAL.txt  MERCADO_PAGO_INTEGRATION_SPEC.md  PAYMENTS.md  REVIEW_PAYMENTS.md  main.py  manage.py  pyproject.toml
agent-docs/: DJANGO_BEST_PRACTICES.md  FRONTEND.md
avuweb/: asgi.py  settings.py  urls.py  wsgi.py
avuweb/main/: admin.py  apps.py  context_processors.py  forms.py  services.py  tasks.py  urls.py
avuweb/main/management/commands/: create_test_users.py
avuweb/main/migrations/: 0001_initial.py  0002_staticpage.py  0003_alter_staticpage_options_staticpage_category.py  0004_add_subscription_models.py
avuweb/main/models/: __init__.py  coupon_code.py  static_page.py  subscription.py  user_profile.py
avuweb/main/templates/main/: home.html  profile.html  static_page.html
avuweb/main/templates/main/includes/: benefits.html  contact_success.html  data_field.html  menu.html  stat_box.html
avuweb/main/templates/main/signup/: base.html  step1.html  step2.html  step3_empresa.html  step3_socio.html  step4.html
avuweb/main/views/: __init__.py  home.py  profile.py  signup.py  static_page.py  webhooks.py
static/css/: theme.css
templates/: base.html
templates/account/: login.html  logout.html  signup.html
todos/: 01-create-main-site.md  02-profile-page.md  03-types-of-users.md
