[project]
name = "avu-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "celery>=5.6.2",
    "django>=4.2.27",
    "django-allauth>=65.13.1",
    "django-ckeditor>=6.7.3",
    "redis>=7.0.1",
    "requests>=2.32.5",
]
